--- a/src/style/index.css
+++ b/src/style/index.css
@@ -67,10 +67,7 @@ a{
     color: #fff;
 }
 nav{
-    box-shadow: 0 0 5px #00000040;
-    display: none !important;
-
-    
+/*     box-shadow: 0 0 5px #00000040; */
 }
 
 nav a {
