--- a/src/style/index.css
+++ b/src/style/index.css
@@ -12,7 +12,7 @@
     list-style-type: none;
 }
 
-a{
+a {
     text-decoration: none;
 }
 
@@ -27,7 +27,7 @@ a{
     padding: .1rem 1.5rem;
 }
 
-.loginBtn{
+.loginBtn {
     background: var(--blue);
     border: none;
     border-radius: 5px;
@@ -43,11 +43,11 @@ a{
     padding: .5rem 1.3rem;
 }
 
-.message.fail{
+.message.fail {
     background-color: red;
 }
 
-.message.success{
+.message.success {
     background-color: green;
 }
 
@@ -66,9 +66,9 @@ a{
 .trans-btn:hover {
     color: #fff;
 }
-nav{
-/*     box-shadow: 0 0 5px #00000040; */
-    display: none;
+
+nav {
+    box-shadow: 0 0 5px #00000040;
 }
 
 nav a {
@@ -76,21 +76,21 @@ nav a {
 }
 
 
-nav .menu a{
+nav .menu a {
     color: #000 !important;
     font-size: 5px !important;
 }
 
-.nav-left{
+.nav-left {
     width: 40px;
 
 }
 
-.nav-left a{
+.nav-left a {
     display: block;
 }
 
-.nav-left img{
+.nav-left img {
     width: 100%;
 }
 
@@ -133,7 +133,7 @@ nav .log-btns {
     gap: 1.5rem;
 }
 
-.big-spinner{
+.big-spinner {
     width: 5rem;
     height: 5rem;
     margin: 3rem auto;
@@ -142,8 +142,8 @@ nav .log-btns {
 
 
 /* .form>div{ */
-    /* width: 90vw; */
-    /* border-radius: 5px;
+/* width: 90vw; */
+/* border-radius: 5px;
     box-shadow: 0 0 5px #00000040;
     max-width: 600px;
     background: var(--light-blue);
@@ -154,7 +154,7 @@ nav .log-btns {
 
 
 
-.signUpForm{
+.signUpForm {
     width: 90vw;
     margin: auto;
     max-width: 800px;
@@ -162,13 +162,13 @@ nav .log-btns {
     padding: 1rem;
 }
 
-.signUpForm button{
+.signUpForm button {
     padding: .5rem 2rem;
     font-size: 1rem;
     margin-top: 1rem;
 }
 
-.form.login{
+.form.login {
     width: 95vw;
     padding: 1rem;
     background-color: #eee;
@@ -177,23 +177,23 @@ nav .log-btns {
 }
 
 
-.loginLeft{
+.loginLeft {
     display: flex;
     align-items: center;
     justify-content: center;
     display: none;
 }
 
-.loginLeft img{
+.loginLeft img {
     width: 100%;
 }
 
-.form.login .con{
+.form.login .con {
     display: flex;
     flex-direction: column;
 }
 
-.form.login>div{
+.form.login>div {
     background: #ECEBE7;
     width: 100%;
 }
@@ -205,7 +205,9 @@ nav .log-btns {
 
 
 .form div input,
-.form select, .form textarea, .form option {
+.form select,
+.form textarea,
+.form option {
     display: block;
     padding: 10px 1rem;
     box-shadow: 0 0 2px #00000040;
@@ -340,12 +342,12 @@ COMPONENTS
 =======================
 */
 
-.card{
+.card {
     color: #333;
 }
 
 
-.card-details{
+.card-details {
     display: flex;
     align-items: center;
     column-gap: 1rem;
@@ -354,7 +356,7 @@ COMPONENTS
     margin: 8px 0;
 }
 
-.card-details h5{
+.card-details h5 {
     font-weight: 300;
     font-size: small;
     display: flex;
@@ -364,7 +366,7 @@ COMPONENTS
 
 
 
-.card-middle{
+.card-middle {
     display: flex;
     align-items: center;
     gap: 1rem;
@@ -372,7 +374,8 @@ COMPONENTS
     justify-content: space-between;
 }
 
-.card-middle span, .header-con .header-left span {
+.card-middle span,
+.header-con .header-left span {
     font-weight: 300;
     width: fit-content;
     padding: 3px .6rem;
@@ -409,18 +412,18 @@ SINGLE PAGE
 */
 
 
-.single-page header{
+.single-page header {
     box-shadow: none !important;
     background-color: #000;
 
 }
 
 
-.single-page li{
+.single-page li {
     list-style: disc;
 }
 
-.header-left h5{
+.header-left h5 {
     display: flex;
     align-items: center;
     gap: .5rem;
@@ -428,38 +431,39 @@ SINGLE PAGE
     line-height: 1.5;
 }
 
-.single-company h3{
+.single-company h3 {
     font-weight: 500;
     color: var(--blue);
     margin-bottom: 1rem;
 }
 
-.company-body main>div, .company-body aside>div {
+.company-body main>div,
+.company-body aside>div {
     margin: 2rem 0;
-    
+
 }
 
-.company-body aside>div{
+.company-body aside>div {
     border-radius: 8px;
-    
+
     padding: 1rem;
     background: var(--lighter-blue);
 }
 
-.company-body aside{
+.company-body aside {
     width: 100%;
 }
 
 .company-body aside .overview li {
-  justify-content: space-between;
-  align-items: center;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .company-body aside .overview li span {
     color: var(--blue);
 }
 
-.profileImg{
+.profileImg {
     border: 2px solid var(--blue);
     width: 2.5rem;
     height: 2.5rem;
@@ -469,19 +473,19 @@ SINGLE PAGE
     border-radius: 50%;
 }
 
-.profileImg img{
+.profileImg img {
     width: 100%;
     height: 100%;
     border-radius: inherit;
 }
 
-.dashboardNavCon .left{
+.dashboardNavCon .left {
     width: 5rem;
     height: 5rem;
     border-radius: 50%;
 }
 
-.dashboardNavCon .left img{
+.dashboardNavCon .left img {
     width: 100%;
     height: 100%;
     object-fit: contain;
@@ -489,13 +493,13 @@ SINGLE PAGE
 }
 
 
-.applytoJob{
+.applytoJob {
     width: 90vw;
     margin: 3rem auto;
     max-width: 1000px;
 }
 
-.applytoJob div{
+.applytoJob div {
     margin-bottom: 1rem;
 }
 
@@ -504,13 +508,14 @@ SINGLE PAGE
 /* SINGLE EMPLOYEE */
 
 
-.employeeHeader{
-    
+.employeeHeader {
+
     padding: 2rem 0;
     background-color: var(--lighter-blue);
 }
 
-.employeeHeaderCon, .employeeBodyCon{
+.employeeHeaderCon,
+.employeeBodyCon {
     width: 95vw;
     margin: auto;
     display: flex;
@@ -520,82 +525,82 @@ SINGLE PAGE
     gap: 1rem;
 }
 
-.employeeHeaderCon{
+.employeeHeaderCon {
     max-width: 800px;
 }
 
-.employeeBodyCon{
+.employeeBodyCon {
     max-width: 1100px;
     gap: 2rem;
     width: 90vw;
 }
 
-.employeeDetails{
+.employeeDetails {
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
 }
 
-.employeeDetails .left{
+.employeeDetails .left {
     width: 5rem;
     height: 5rem;
     border-radius: 50%;
 }
 
 
-.employeeDetails .left img{
+.employeeDetails .left img {
     border-radius: inherit;
 }
-.employeeDetails .right div{
+
+.employeeDetails .right div {
     display: flex;
     flex-wrap: wrap;
-    gap: 1rem ;
-    /* color: #777; */
+    gap: 1rem;
     font-weight: 300;
 }
 
-.employeeDetails .right div>span{
+.employeeDetails .right div>span {
     display: flex;
     align-items: center;
     gap: 6px;
     font-size: .9rem;
 }
 
-.employeeDetails .right .profession{
+.employeeDetails .right .profession {
     color: var(--blue);
 }
 
 
-.employeeBody{
+.employeeBody {
     padding: 2rem 0;
 }
 
-.employeeBodyCon>*>*{
+.employeeBodyCon>*>* {
     border-radius: 8px;
 }
 
-.workExperience{
+.workExperience {
     padding: 1rem;
     background: var(--lighter-blue);
 }
 
 
-.aboutEmployee p{
+.aboutEmployee p {
     color: #555;
 }
 
-.employeeBody aside{
+.employeeBody aside {
     width: 100%;
 }
 
-.employeeBody aside>*{
+.employeeBody aside>* {
     background: var(--lighter-blue);
     margin-bottom: 2rem;
     padding: 1rem;
 }
 
-.employeeBody aside .details li{
+.employeeBody aside .details li {
     display: flex;
     gap: 1rem;
     align-items: center;
@@ -603,16 +608,16 @@ SINGLE PAGE
     text-transform: capitalize;
 }
 
-.employeeBody aside .details li div p{
+.employeeBody aside .details li div p {
     font-weight: bold;
     margin-bottom: -5px;
 }
 
-.employeeBody aside .details li .icon{
+.employeeBody aside .details li .icon {
     color: var(--blue);
 }
 
-.employeeBody .contact .form{
+.employeeBody .contact .form {
     padding: 0;
 }
 
@@ -642,29 +647,29 @@ LIST PAGE
 =======================
 */
 
-.jobs>section{
+.jobs>section {
     display: flex;
     padding: 1rem 2rem;
 }
 
-.jobs .search{
+.jobs .search {
     width: 90vw;
     margin: auto;
     display: flex;
     border: var(--blue) 2px solid;
-    padding: 0.3rem ;
+    padding: 0.3rem;
     border-radius: 30px;
     transition: display 1s ease;
 }
 
-.jobs .search input{
+.jobs .search input {
     border: none;
     padding: 0 .5rem;
     margin: 0 5px;
     outline: inherit;
 }
 
-.jobs .search button{
+.jobs .search button {
     background: var(--blue);
     color: #fff;
     border: none;
@@ -676,158 +681,187 @@ LIST PAGE
     border-radius: 50%;
 }
 
-.jobs>section main{
+.jobs>section main {
     width: 100%;
 }
 
-.jobs>section aside{
+.jobs>section aside {
     width: 0;
     overflow: hidden;
     transition: width .5s ease;
 }
 
-.job{
+.job {
     width: 100%;
     display: block;
 }
 
-
-
-.jobCard{
+.jobCard {
     display: flex;
+    flex-wrap: wrap;
     margin-bottom: 1rem;
-    /* box-shadow: 0 2px 5px #00000040; */
     border: 1px #eee solid;
-    padding: 1rem;
+    padding: 1rem 1rem 2rem;
     border-radius: 8px;
     width: 100%;
     position: relative;
-    padding-bottom: 2rem;
     gap: 1rem;
-    text-transform: capitalize;
+    text-transform: capitalize
 }
 
 .featured-jobs .jobList {
     padding: 1rem;
     gap: 1rem;
-    /* max-width: 1100px; */
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
-    margin: auto;
+    max-width: 1200px;
+    /* grid-template-columns: repeat(auto-fit,minmax(400px,1fr)); */
+    margin: auto
 }
 
-.jobCard .left{
+@media (max-width: 395px) {
+
+    .featured-jobs .jobCard {
+        flex-direction: row;
+    }
+}
+
+@media (min-width: 680px) {
+    .home .featured-jobs .jobList {
+        grid-template-columns: repeat(2, 1fr)
+    }
+
+    .featured-jobs .jobCard {
+        flex-direction: column;
+    }
+}
+
+@media (min-width: 860px) {
+
+    .featured-jobs .jobCard {
+        flex-direction: row;
+    }
+}
+
+.jobCard .left {
     width: 4rem;
-    border-radius: 5px;
+    border-radius: 5px
 }
 
-.jobCard .left img{
+.jobCard .left img {
     width: 100%;
-    border-radius: inherit;
+    border-radius: inherit
 }
 
-.jobCard .right h3{
-    font-size: 1.2rem;
+.jobCard .right h3 {
+    font-size: 1.2rem
 }
 
-.jobCard .right .details{
+.jobCard .right .details {
     display: flex;
     align-items: center;
-    
     gap: 1rem;
-    flex-wrap: wrap;
+    flex-wrap: wrap
 }
 
-.jobCard .right .details>span{
+.jobCard .right .details>span {
     margin-bottom: -1rem;
     color: #666;
-    font-size: small;
+    font-size: small
 }
 
-.jobCard .right .icon{
+.jobCard .right .icon {
     font-weight: 300;
     font-size: medium;
-    margin-right: 2px;
+    margin-right: 2px
 }
 
-.showFilter{
+.showFilter {
     width: 40% !important;
-    margin-right: 2rem;
+    margin-right: 2rem
 }
 
-.filterToggler{
+.filterToggler {
     color: var(--blue);
     cursor: pointer;
-    width: fit-content;
+    width: fit-content
 }
 
-.jobCard .right>span span{
-    font-size: .1rem;
+.jobCard .right>span span {
+    font-size: .1rem
 }
 
-.jobCard #status{
+.jobCard #status {
     border: 1px solid;
     height: fit-content;
     padding: 2px 1rem;
     border-radius: 5px;
     font-size: .8rem;
     position: absolute;
-    right: 2rem;
+    right: 2rem
 }
 
 
-.jobCard #status.open{
+
+.jobCard #status.open {
     background-color: var(--orange);
     color: #fff;
-    transition: background .4s ease;
+    transition: background .4s ease
 }
 
-.jobCard #status.close{
+.jobCard #status.close {
     background-color: var(--red);
-    color: #fff;
-    
+    color: #fff
 }
 
-.jobCard:hover #status{
-    background: var(--green);
+.jobCard:hover #status {
+    background: var(--green)
+}
+
+@media (max-width: 200px) {
+
+    .jobCard #status {
+        display: none;
+    }
 }
 
 
 
-.FilterBar{
+
+
+.FilterBar {
     background: var(--lighter-blue);
     padding: 1rem;
     border-radius: 8px;
-    
+
 }
 
 .FilterBar input,
 .FilterBar select,
-.FilterBar option{
+.FilterBar option {
     background-color: transparent;
     border: none;
     outline: none;
 }
 
-.FilterBar input:focus .FilterBar>div>div{
+.FilterBar input:focus .FilterBar>div>div {
     outline: 1px solid;
 }
 
-.FilterBar h4{
+.FilterBar h4 {
     font-size: medium;
 }
 
-.FilterBar>div div{
+.FilterBar>div div {
     background-color: #fff;
     padding: 1rem;
     display: flex;
     align-items: center;
-    gap: 1rem ;
+    gap: 1rem;
     margin-bottom: 1rem;
     border-radius: 5px;
 }
 
-.companiesHeader{
+.companiesHeader {
     background: url(../assets//teamwork-3213924_1280.jpg);
     color: #fff;
     font-size: 4rem;
@@ -841,14 +875,14 @@ LIST PAGE
     margin-bottom: 3rem;
 }
 
-.employeesHeader{
+.employeesHeader {
     padding: 3rem 0;
     display: flex;
     justify-content: center;
     align-items: center;
     color: #fff;
     margin-bottom: 3rem;
-    
+
     height: 30vh;
     background: linear-gradient(#00000050, #00000050), url(../assets/entrepreneur-2326419_1280.jpg);
     background-size: cover;
@@ -856,11 +890,11 @@ LIST PAGE
     background-repeat: no-repeat;
 }
 
-.employeesHeader h2{
+.employeesHeader h2 {
     font-size: 2.3rem;
 }
 
-.pagination{
+.pagination {
     text-align: center;
     display: flex;
     justify-content: center;
@@ -869,35 +903,35 @@ LIST PAGE
     margin-top: 2rem;
 }
 
-.pagination .icon{
+.pagination .icon {
     font-size: 1.2rem;
     color: var(--blue);
     cursor: pointer;
     justify-content: center;
-    align-items: center; 
+    align-items: center;
     width: 40px;
     height: 40px;
     padding: 10px;
     border-radius: 50%;
 }
 
-.pagination .icon:hover{
+.pagination .icon:hover {
     background: var(--blue);
     color: #fff;
-    
+
 }
 
-.pagination .currentPage{
+.pagination .currentPage {
     background: var(--blue);
     color: #fff;
-    display: inline-block; 
+    display: inline-block;
     width: 40px;
     height: 40px;
     padding: 10px;
     border-radius: 50%;
-} 
+}
 
-.pagination .text{
+.pagination .text {
     word-spacing: 1rem;
 }
 
@@ -926,25 +960,25 @@ HOME CATEGORIES
 
 
 .job-categories {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
-    grid-gap: 20px;
+    display: none !important;
+    /* grid-template-columns: repeat(auto-fit, minmax(350px, 1fr)); */
+    /* grid-gap: 20px; */
     max-width: 1200px;
     margin: auto;
     padding: 1rem;
-  }
+}
 
-  .home .categories{
+.home .categories {
     margin: 3rem 0;
-  }
+}
 
 
-  .home>div .text{
+.home>div .text {
     text-align: center;
     margin-bottom: 2rem;
-  }
-  
-  .category {
+}
+
+.category {
     display: flex;
     align-items: center;
     padding: 20px;
@@ -952,22 +986,22 @@ HOME CATEGORIES
     border: 1px solid #eee;
     cursor: pointer;
     transition: background-color 0.3s, box-shadow 0.3s;
-  }
-  
-  .category:hover {
+}
+
+.category:hover {
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
-  }
+}
 
-  .category:hover h3{
+.category:hover h3 {
     color: var(--blue);
-  }
+}
 
-  .category:hover .category-icon{
+.category:hover .category-icon {
     background: var(--blue);
     color: #fff;
-  }
-  
-  .category-icon {
+}
+
+.category-icon {
     font-size: 1.5rem;
     margin-right: 10px;
     border-radius: 10px;
@@ -975,36 +1009,36 @@ HOME CATEGORIES
     padding: 10px;
     color: var(--blue);
     transition: background .5s, color .5s;
-  }
-  
-  .category-info h3 {
+}
+
+.category-info h3 {
     margin: 0;
     font-size: 1rem;
-  }
-  
-  .category-info span {
+}
+
+.category-info span {
     font-size: 0.9rem;
     color: #666;
-  }
+}
 
-  .recruiting{
+.recruiting {
     margin: 3rem 0;
     background: url(../assets/recruit.jpg);
     padding: 3rem 0;
     background-size: cover;
-  }
+}
 
-  .recruiting .con{
+.recruiting .con {
     width: 90vw;
     margin: auto;
     max-width: 900px;
-  }
+}
 
-  .recruiting .content{
+.recruiting .content {
     width: 100%;
     max-width: 500px;
-  }
-  
+}
+
 
 
 /* 
@@ -1021,50 +1055,48 @@ END OF HOME CATEGORIES
     color: #fff;
     padding: 30px 0;
     margin-top: 5rem;
-  }
-  
-  .footer-inner {
+}
+
+.footer-inner {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     max-width: 1200px;
     margin: 0 auto;
     width: 90vw;
-  }
-  
-  .footer-column {
+}
+
+.footer-column {
     flex: 1;
     margin-right: 20px;
-  }
-  
-  .footer-column:last-child {
+}
+
+.footer-column:last-child {
     margin-right: 0;
-  }
-  
-  .footer-column h2 {
+}
+
+.footer-column h2 {
     font-size: 1.2rem;
     margin-bottom: 10px;
-  }
-  
-  .footer-column p {
+}
+
+.footer-column p {
     margin-bottom: 10px;
-  }
-  
-  .social-icons a {
+}
+
+.social-icons a {
     color: #fff;
     margin-right: 10px;
-  }
-  
-  .social-icons a:hover {
-    color: #ccc;
-  }
-  
-  @media (max-width: 768px) {
-    .footer-column {
-      flex: 1 0 100%;
-      margin-right: 0;
-      margin-bottom: 20px;
-    }
-  }
-  
+}
 
+.social-icons a:hover {
+    color: #ccc;
+}
+
+@media (max-width: 768px) {
+    .footer-column {
+        flex: 1 0 100%;
+        margin-right: 0;
+        margin-bottom: 20px;
+    }
+}
