--- a/src/style/NavStyle.css
+++ b/src/style/NavStyle.css
@@ -100,6 +100,13 @@
     border-radius: 50%;
 }
 
+
+@media (max-width: 250px){
+    .navUserIcon>span{
+        display: none;
+    }
+}
+
 .navUserIcon img {
     border-radius: inherit;
 }
