--- a/src/style/employees.css
+++ b/src/style/employees.css
@@ -29,6 +29,7 @@
     align-items: center;
     gap: 1rem;
     font-size: small;
+    flex-wrap: wrap;
     
 }
 
@@ -36,11 +37,13 @@
     display: flex;
     align-items: center;
     gap: .3rem;
+    flex-wrap: wrap;
 }
 
 .featured-employees .left{
     display: flex;
     gap: 1rem;
+    flex-wrap: wrap;
 }
 
 .featured-employees .left .img{
